# inference-forge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
benchmarks/: run_benchmark.py
docs/: ADR.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboards.yml  inference_forge.json
scripts/: debug_parse.py  dump_one_sarvam_roundtrip.py  test_caller.py  test_complex.py  test_strip.py
src/inference_forge/: __init__.py  config.py  main.py
src/inference_forge/api/: routes.py  schemas.py
src/inference_forge/observability/: logger.py  metrics.py
src/inference_forge/pipeline/: batcher.py  cache.py  caller.py  circuit_breaker.py  estimator.py  job_store.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_batcher.py  test_cache.py  test_circuit_breaker.py  test_estimator.py  test_retry.py
